# advancedprogramming

./: README.md
botclient/: .gitignore  CMakeLists.txt  Doxyfile  README.md  botclient.cpp  botclient.h  main.cpp
bots/: .gitignore  CMakeLists.txt  Doxyfile  README.md  bot.cpp  bot.h  bots.cpp  bots.h
botserver/: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
lectures/lecture1/: CMakeLists.txt  Doxyfile  Makefile.handmade  README.md  compile.sh  example.cpp  sdlexample.cpp
lectures/lecture10/: README.md
lectures/lecture11/: CMakeLists.txt  README.md  clp.pl  example.pl  functional.cpp  functional.hs  symbolic.clj
lectures/lecture12/: CMakeLists.txt  README.md  test_boost.cpp
lectures/lecture13/: CMakeLists.txt  README.md  qtapp.cpp  qtcompiled.cpp  qtloaded.cpp  qtquick.qml  qtwindow.ui
lectures/lecture14/: README.md
lectures/lecture15/: CMakeLists.txt  README.md
lectures/lecture2/: CMakeLists.txt  README.md  big_o.cpp  big_o_example.cpp  iterators.cpp  loop_exercises.cpp  ranged_for.cpp
lectures/lecture3/: CMakeLists.txt  README.md  raii.cpp  raii_exceptions.cpp  rvalues_lvalues.cpp  test.txt
lectures/lecture4/: CMakeLists.txt  README.md  const.cpp  namespaces.cpp  static.cpp  static_header.cpp  static_header.h  unicode.cpp
lectures/lecture5/: CMakeLists.txt  README.md  auto_and_lambdas.cpp  inheritance.cpp
lectures/lecture6/: CMakeLists.txt  README.md  mpi_test.cpp
lectures/lecture7/: CMakeLists.txt  README.md  montecarlo.py  vegas.cpp
lectures/lecture8/: CMakeLists.txt  README.md  templates.cpp
lectures/lecture9/: CMakeLists.txt  README.md  pointers.cpp
